Fix header text alignment and font in header/footer.

--- a/server/pdf/pdf.css
+++ b/server/pdf/pdf.css
@@ -25,7 +25,7 @@ src: url('/assets/font3.otf') format('opentype');
 header > .confidential{
   float:right;
   text-align: right;
-  font-family: "Jungka-Light";
+  font-family: "Jungka-Light", sans-serif;
   font-size: 9px;
   right: 0;
 }
@@ -165,7 +165,7 @@ header > .confidential{
 
 footer .footer_contact {
   margin: 0px auto;
-  font-family: "Jungka-Light";
+  font-family: "Jungka-Light", sans-serif;
   font-size: 0.5em;
   text-align: center;
   width: 100%;
